# beans-rs

./: CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: compile.yml  release.yml
docs/: code-sign.md  sentry.md  server-integration.md
src/: appvar.json  aria2.rs  butler.rs  ctx.rs  depends.rs  error.rs  extract.rs  flags.rs  lib.rs  logger.rs  main.rs  version.rs  wizard.rs
src/gui/: dialog.rs  mod.rs
src/helper/: linux.rs  mod.rs  windows.rs
src/text/: install_complete_linux.txt  msgbox_panic_text.txt  update_complete_linux.txt  update_complete_windows.txt
src/workflows/: clean.rs  install.rs  uninstall.rs  update.rs  verify.rs
