[package]
name = "wings"
version = "1.7.3"
edition = "2024"
authors = [
    "Kate Ward <kate@dariox.club>",
    "ToastXC <contact@toastxc.xyz>",
    "Sour Dani <dani@prefortress.com>"
]
description = "Open-Source Installer for Sourcemods"
repository = "https://github.com/Pre-Fortress-2/wings"
license = "GPL-3.0"

[dependencies]
async-recursion = "1.1.1"
async-stream = "0.3.6"
const_format = "0.2.35"
futures = "0.3.31"
futures-util = "0.3.31"
indicatif = "0.18.2"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
tar = "0.4.44"
tokio-util = { version= "0.7.17", features = ["io"] }
zstd = "0.13.3"
thiserror = "2.0.17"
include-flate = "0.3.1"
simple-home-dir = "0.5.2"
clap = { version = "4.5.51", features = ["cargo"] }
bitflags = "2.10.0"
log = "0.4.28"
lazy_static = "1.5.0"
thread-id = "5.0.0"
colored = "3.0.0"
sentry-log = "0.45.0"
chrono = "0.4.42"

fltk = { version = "1.5.21" }
fltk-theme = "0.7.9"
dark-light = "2.0.0"
image = { version = "0.25.8", features = ["png"] }

[build-dependencies]
fl2rust = "0.7.1"

[target.'cfg(target_os = "windows")'.dependencies]
winconsole = { version = "0.11.1", features = ["window"] }
winreg = "0.55.0"
widestring = "1.2.1"
windows = { version = "0.62.2", features = ["Win32_System_IO", "Win32_Storage_FileSystem"] }
dunce = "1.0.5"

[dependencies.sentry]
version = "0.45.0"
default-features = false
features = [
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "release-health",
    
    "reqwest",
    "rustls"
]


[dependencies.tokio]
version = "1.48.0"
features = [
    "macros",
    "rt-multi-thread"
]

[dependencies.reqwest]
version = "0.12.24"
features = [
    "multipart",
    "stream",
    "json",

    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration"
]
default-features = false

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 1
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = false

